fixup// update sign key